# SmartSoftComponentDeveloperAPIcpp

./: .cproject  .project  CMakeLists.txt  README.md  generateAndPublishDocumentation.sh  smartIProcessingPatterns_T.h
SmartSoft_CD_API/: .cproject  .project  CMakeLists.txt  SmartSoft_CD_APIConfig.cmake  smartChronoAliases.h  smartIActiveQueueInputHandlerDecorator_T.h  smartIClientPattern.h  smartICommunicationObject.h  smartICommunicationPattern.h  smartIComponent.h  smartICorrelationId.h  smartIEventClientPattern_T.h  smartIEventServerPattern_T.h  smartIInputHandler_T.h  smartIInputTaskTrigger.h  smartIManagedTask.h  smartIProcessingPatterns_T.h  smartIPushClientPattern_T.h  smartIPushServerPattern_T.h  smartIQueryClientPattern_T.h  smartIQueryServerPattern_T.h  smartIQueryStatus.h  smartISendClientPattern_T.h  smartISendServerPattern_T.h  smartIServerPattern.h  smartIShutdownObserver.h  smartIStatusCode.h  smartITask.h  smartITaskInteractionObserver.h  smartITaskTriggerObserver.h  smartITimedTaskTrigger.h  smartITimerHandler.h  smartITimerManager.h  smartIUniversalId_T.h  smartInputTaskTrigger.h  smartNumericCorrelationId.h  smartPrescaleManager.h  smartQueryServerTaskTrigger_T.h  smartQueryStatus.h  smartStatusCode.h  (+2 more)
doc/: CMakeLists.txt  DoxygenLayout.xml  SmartSoft-API-Reference.doxyfile.in  mainpage.dox
gtests/: CMakeLists.txt  SmartSoftTestsConfig.cmake.in
gtests/FakeObjectsImpl/: CMakeLists.txt  FakeClientBase.cpp  FakeClientBase.h  FakeComponent.cpp  FakeComponent.h  FakeEventActivation.h  FakeEventClientPattern.h  FakeEventResult.h  FakeEventServerPattern.h  FakeNamingService.cpp  FakeNamingService.h  FakePatternTypeEnum.h  FakePushClientPattern.h  FakePushServerPattern.h  FakeQueryClientPattern.h  FakeQueryServerPattern.h  FakeSendClientPattern.h  FakeSendServerPattern.h  FakeServerBase.cpp  FakeServerBase.h  FakeTask.cpp  FakeTask.h  README.md
gtests/FakeObjectsTests/: CMakeLists.txt  FakeObjectsTests.cpp  FakeTestingEnvironment.cpp  FakeTestingEnvironment.h
gtests/FakeObjectsTests/CommTestObjectsFake/: Comm3dPoseFake.cpp  Comm3dPoseFake.h  CommTextFake.cpp  CommTextFake.h  CommTrajectoryFake.cpp  CommTrajectoryFake.h
gtests/SmartSoftTests/: AllTests.h  EventPatternTests.h  PushPatternTests.h  QueryPatternTests.h  README.md  SendPatternTests.h  TestingEnvironmentBase.h
gtests/SmartSoftTests/CommTestObjects/: Comm3dPose.h  CommText.h  CommTrajectory.h
html/: annotated.html  classSmart_1_1IActiveQueueInputHandlerDecorator-members.html  classSmart_1_1IActiveQueueInputHandlerDecorator.html  classSmart_1_1IClientPattern-members.html  classSmart_1_1IClientPattern.html  classSmart_1_1ICommunicationObject-members.html  classSmart_1_1ICommunicationObject.html  classSmart_1_1ICommunicationPattern-members.html  classSmart_1_1ICommunicationPattern.html  classSmart_1_1IComponent-members.html  classSmart_1_1IComponent.html  classSmart_1_1IEventClientPattern-members.html  classSmart_1_1IEventClientPattern.html  classSmart_1_1IEventHandler-members.html  classSmart_1_1IEventHandler.html  classSmart_1_1IEventServerPattern-members.html  classSmart_1_1IEventServerPattern.html  classSmart_1_1IEventTestHandler-members.html  classSmart_1_1IEventTestHandler.html  classSmart_1_1IInputHandler-members.html  classSmart_1_1IInputHandler.html  classSmart_1_1IInputSubject-members.html  classSmart_1_1IInputSubject.html  classSmart_1_1IManagedTask-members.html  classSmart_1_1IManagedTask.html  classSmart_1_1IPushClientPattern-members.html  classSmart_1_1IPushClientPattern.html  classSmart_1_1IPushServerPattern-members.html  classSmart_1_1IPushServerPattern.html  classSmart_1_1IQueryClientPattern-members.html  classSmart_1_1IQueryClientPattern.html  classSmart_1_1IQueryServerHandler-members.html  classSmart_1_1IQueryServerHandler.html  classSmart_1_1IQueryServerPattern-members.html  classSmart_1_1IQueryServerPattern.html  classSmart_1_1ISendClientPattern-members.html  classSmart_1_1ISendClientPattern.html  classSmart_1_1ISendServerHandler-members.html  classSmart_1_1ISendServerHandler.html  classSmart_1_1ISendServerPattern-members.html  (+81 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+19 more)
