CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(FakeObjectsTests)

FILE(GLOB SRCS ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB COMM_SRCS ${PROJECT_SOURCE_DIR}/CommTestObjectsFake/*.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS} ${COMM_SRCS})
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} FakeObjectsImpl SmartSoftTests)

# define include paths for the target
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} INTERFACE
  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
)